Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-560

Improvements to the Haskell bindings: (Add THttpClient, move to ByteString, compiler fixes, and a haskell Tutorial)

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      Wanted to add a THttpClient for the haskell bindings so I could use the EverNote API. In the process, I found a couple of bugs with the haskell code generator, and decided I might as well add some tutorial information.

      Attachments

        1. thrifthaskell.patch
          19 kB
          Sasha Rush

        Activity

          People

            srush Sasha Rush
            srush Sasha Rush
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: