THRIFT-560. haskell: Move to ByteString and compiler fixes

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@898012 13f79535-47bb-0310-9956-ffa450edef68